# cli-log

./: Cargo.toml  README.md  bacon.toml
examples/small-app/: Cargo.toml  README.md
examples/small-app/src/: main.rs
src/: file_logger.rs  init.rs  lib.rs  mem.rs  time.rs
