[package]
name = "cli-log"
version = "1.2.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/cli-log"
description = "a simple logging and timing facility configured with an env variable"
edition = "2018"
keywords = ["log", "terminal", "file", "benchmark"]
license = "MIT"
categories = []
readme = "README.md"

[features]
default = ["mem"]
mem = ["proc-status", "file-size"]


[dependencies]
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
proc-status = { version = "0.1", optional = true }
file-size = { version = "1.0.3", optional = true }
